--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -1,4 +1,4 @@
-<div class="eqLogic eqLogic-widget col2 #class# #category#" data-eqLogic_id="#id#" data-eqType="#eqType#" data-version="#version#" data-eqLogic_uid="#uid#" data-translate-category="#translate_category#" data-category="#category#" data-tags="#tags#" style="#style#">
+<div class="eqLogic eqLogic-widget col2" data-eqLogic_id="#id#" data-eqType="#eqType#" data-version="#version#" data-eqLogic_uid="#uid#" data-translate-category="#translate_category#" data-category="#category#" data-tags="#tags#" style="#style#">
 	<style>
 		div.eqLogic-widget .cmd.monitor-btn {
 			padding-top: 6px;
@@ -124,15 +124,6 @@
 				<i class="fas fa-sync"></i>
 			</span>
 		</div>
-		<script>
-			if ('#refresh_id#' != '') {
-				document.querySelector('.eqLogic[data-eqLogic_uid="#uid#"] .refresh')?.addEventListener('click', function() {
-					jeedom.cmd.execute({ id: '#refresh_id#' })
-				})
-			} else {
-				document.querySelector('.eqLogic[data-eqLogic_uid="#uid#"] .refresh')?.remove()
-			}
-		</script>
 	</div>
 	<div class="cmds text-left" style="display: block;">
 		<div class="tooltips" style="margin-left:5px;display: #distri_name_display#;">
@@ -377,5 +368,14 @@
 			}
 		</script>
 	</div>
+	<script>
+		if ('#refresh_id#' != '') {
+			document.querySelector('.eqLogic[data-eqLogic_uid="#uid#"] .refresh')?.addEventListener('click', function() {
+				jeedom.cmd.execute({ id: '#refresh_id#' })
+			})
+		} else {
+			document.querySelector('.eqLogic[data-eqLogic_uid="#uid#"] .refresh')?.remove()
+		}
+	</script>
 	#divGraphInfo#
 </div>
