--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -12,7 +12,7 @@
 			justify-content: space-between;
 		}
 		div.monitor-name-center {
-			display: flex;
+			display: flex !important;
 			flex: 1;
 			justify-content: center;
 		}
