--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -9,6 +9,8 @@
 		}
 		div.monitor-name-flex {
 			display: flex;
+			padding-left: 5px !important;
+			padding-right: 5px !important;
 			justify-content: space-between;
 		}
 		div.monitor-name-center {
