--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -8,20 +8,20 @@
 			display: none !important;
 		}
 		div.monitor-name-flex {
-			display: flex;
+			display: flex !important;
 			padding-left: 5px !important;
-			padding-right: 5px !important;
 			justify-content: space-between;
 		}
 		div.monitor-name-center {
 			display: flex !important;
 			flex: 1;
+			float: center;
 			justify-content: center;
+			white-space: nowrap;
 		}
 		div.monitor-name-left {
 			display: flex !important;
 			flex: 1;
-			padding-left: 5px;
 			float: left;
 			justify-content: flex-start;			
 		}
@@ -29,11 +29,21 @@
 			margin-right: 3px;
 		}
 		div.monitor-name-right {
-			display: flex;
+			display: flex !important;
 			flex: 1;
 			padding-right: 5px;
 			float: right;
 			justify-content: flex-end;
+		}
+		div.monitor-name-right i {
+			padding-right: 5px;
+		}
+		div.monitor-cmds {
+			display: block;
+			text-align: left;
+			padding-left: 5px;
+			overflow: hidden;
+			text-overflow: ellipsis;
 		}
 	</style>
 	<div class="widget-name monitor-name-flex">
@@ -118,8 +128,7 @@
 			</span>
 		</div>
 		<div class="monitor-name-center">
-			<span class="reportModeVisible">#name_display# <span class="object_name">#object_name#</span></span>
-			<a href="#eqLink#" class="reportModeHidden">#name_display# <span class="object_name">#object_name#</span></a>
+			<span>#name_display# <span class="object_name">#object_name#</span></span>
 		</div>
 		<div class="monitor-name-right">
 			<span class="cmd refresh cursor" title="Rafraîchir" data-cmd_id="#refresh_id#">
@@ -127,12 +136,12 @@
 			</span>
 		</div>
 	</div>
-	<div class="cmds text-left" style="display: block;">
-		<div class="tooltips" style="margin-left:5px;display: #distri_name_display#;">
+	<div class="cmds monitor-cmds">
+		<div class="tooltips" style="display: #distri_name_display#;">
 			<span title="Distribution Linux || Date valeur : #distri_name_value# || Date collecte : #distri_name_collect#" style="width:15px;max-width:15px;max-height:15px;">#distri_name_icon#</span>
 			<span>#distri_name#</span>
 		</div>
-		<div class="tooltips" style="margin-left:5px;display: #uptime_display#;">
+		<div class="tooltips" style="display: #uptime_display#;">
 			<span title="Temps d'Activité (UpTime) || Date valeur : #uptime_value# || Date collecte : #uptime_collect#" style="width:15px;max-width:15px;max-height:15px;">#uptime_icon#</span>
 			<span id="uptime#id#"></span>
 		</div>
@@ -141,7 +150,7 @@
 				document.getElementById('uptime#id#').innerHTML = '<span>#uptime#</span>';
 			}
 		</script>
-		<div class="tooltips" style="margin-left:5px;display: #load_avg_display#;">
+		<div class="tooltips" style="display: #load_avg_display#;">
 			<span title="Charge système (load average) || Date valeur : #load_avg_value# || Date collecte : #load_avg_collect#" style="width:15px;max-width:15px;max-height:15px;">#load_avg_icon#</span>
 			<span id="load_avg_1mn#id#"></span><span id="load_avg_5mn#id#"></span><span id="load_avg_15mn#id#"></span>
 		</div>
@@ -182,7 +191,7 @@
 				}
 			}
 		</script>
-		<div class="tooltips" style="margin-left:5px;display: #memory_display#;">
+		<div class="tooltips" style="display: #memory_display#;">
 			<span title="Mémoire Vive (% Disponible) || Date valeur : #memory_value# || Date collecte : #memory_collect#" style="width:15px;max-width:15px;max-height:15px;">#memory_icon#</span>
 			<span id="memory_available_percent#id#"></span>
 		</div>
@@ -201,7 +210,7 @@
 				}
 			}
 		</script>
-		<div class="tooltips" style="margin-left:5px;display: #swap_display#;">
+		<div class="tooltips" style="display: #swap_display#;">
 			<span title="Mémoire Swap (% Libre) || Date valeur : #swap_value# || Date collecte : #swap_collect#" style="width:15px;max-width:15px;max-height:15px;">#swap_icon#</span>
 			<span id="swap_free_percent#id#"></span>
 		</div>
@@ -220,7 +229,7 @@
 				}
 			}
 		</script>
-		<div class="tooltips" style="margin-left:5px;display: #network_display#;">
+		<div class="tooltips" style="display: #network_display#;">
 			<span title="Trafic Réseau (#network_name# / #network_ip#) || Date valeur : #network_value# || Date collecte : #network_collect#" style="width:15px;max-width:15px;max-height:15px;">#network_icon#</span>
 			<span id="network#id#"></span>
 		</div>
@@ -229,7 +238,7 @@
 				document.getElementById('network#id#').innerHTML = '<span>#network#</span>';
 			}
 		</script>
-		<div class="tooltips" style="margin-left:5px;display: #hdd_display#;">
+		<div class="tooltips" style="display: #hdd_display#;">
 			<span title="Espace disque (% Libre) || Date valeur : #hdd_value# || Date collecte : #hdd_collect#" style="width:15px;max-width:15px;max-height:15px;">#hdd_icon#</span>
 			<span id="hdd#id#"></span>
 		</div>
@@ -252,7 +261,7 @@
 		<script>
 			if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
 				if ('#syno_hddv2_display#' === 'block') {
-					document.getElementById('syno_hddv2#id#').innerHTML = '<div id="syno_hddv2#id#" class="tooltips" style="margin-left:5px;display: #syno_hddv2_display#;"><span title="Syno Volume 2 (% Libre) || Date valeur : #syno_hddv2_value# || Date collecte : #syno_hddv2_collect#" style="width:15px;max-width:15px;max-height:15px;">#syno_hddv2_icon#</span> <span id="syno_hddv2_free_percent#id#"></span></div>';
+					document.getElementById('syno_hddv2#id#').innerHTML = '<div id="syno_hddv2#id#" class="tooltips" style="display: #syno_hddv2_display#;"><span title="Syno Volume 2 (% Libre) || Date valeur : #syno_hddv2_value# || Date collecte : #syno_hddv2_collect#" style="width:15px;max-width:15px;max-height:15px;">#syno_hddv2_icon#</span> <span id="syno_hddv2_free_percent#id#"></span></div>';
 					if ('#syno_hddv2_free_percent#' === '') {
 						document.getElementById('syno_hddv2_free_percent#id#').innerHTML = '<span></span>';
 					} else if (parseInt('#syno_hddv2_free_percent#') < parseInt('#syno_hddv2_free_percent_colorlow#')) {
@@ -271,7 +280,7 @@
 		<script>
 			if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
 				if ('#syno_hddusb_display#' === 'block') {
-					document.getElementById('syno_hddusb#id#').innerHTML = '<div id="syno_hddusb#id#" class="tooltips" style="margin-left:5px;display: #syno_hddusb_display#;"><span title="Syno Volume USB (% Libre) || Date valeur : #syno_hddusb_value# || Date collecte : #syno_hddusb_collect#" style="width:15px;max-width:15px;max-height:15px;">#syno_hddusb_icon#</span> <span id="syno_hddusb_free_percent#id#"></span></div>';
+					document.getElementById('syno_hddusb#id#').innerHTML = '<div id="syno_hddusb#id#" class="tooltips" style="display: #syno_hddusb_display#;"><span title="Syno Volume USB (% Libre) || Date valeur : #syno_hddusb_value# || Date collecte : #syno_hddusb_collect#" style="width:15px;max-width:15px;max-height:15px;">#syno_hddusb_icon#</span> <span id="syno_hddusb_free_percent#id#"></span></div>';
 					if ('#syno_hddusb_free_percent#' === '') {
 						document.getElementById('syno_hddusb_free_percent#id#').innerHTML = '<span></span>';
 					} else if (parseInt('#syno_hddusb_free_percent#') < parseInt('#syno_hddusb_free_percent_colorlow#')) {
@@ -290,7 +299,7 @@
 		<script>
 			if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
 				if ('#syno_hddesata_display#' === 'block') {
-					document.getElementById('syno_hddesata#id#').innerHTML = '<div id="syno_hddesata#id#" class="tooltips" style="margin-left:5px;display: #syno_hddesata_display#;"><span title="Syno Volume eSATA (% Libre) || Date valeur : #syno_hddesata_value# || Date collecte : #syno_hddesata_collect#" style="width:15px;max-width:15px;max-height:15px;">#syno_hddesata_icon#</span> <span id="syno_hddesata_free_percent#id#"></span></div>';
+					document.getElementById('syno_hddesata#id#').innerHTML = '<div id="syno_hddesata#id#" class="tooltips" style="display: #syno_hddesata_display#;"><span title="Syno Volume eSATA (% Libre) || Date valeur : #syno_hddesata_value# || Date collecte : #syno_hddesata_collect#" style="width:15px;max-width:15px;max-height:15px;">#syno_hddesata_icon#</span> <span id="syno_hddesata_free_percent#id#"></span></div>';
 					if ('#syno_hddesata_free_percent#' === '') {
 						document.getElementById('syno_hddesata_free_percent#id#').innerHTML = '<span></span>';
 					} else if (parseInt('#syno_hddesata_free_percent#') < parseInt('#syno_hddesata_free_percent_colorlow#')) {
@@ -305,7 +314,7 @@
 				}
 			}
 		</script>
-		<div class="tooltips" style="margin-left:5px;display: #cpu_display#;">
+		<div class="tooltips" style="display: #cpu_display#;">
 			<span title="Nombre CPU - Fréquence (Température) || Date valeur : #cpu_value# || Date collecte : #cpu_collect#" style="width:15px;max-width:15px;max-height:15px;">#cpu_icon#</span>
 			<span id="cpu#id#"></span><span id="cpu_temp#id#"></span>
 		</div>
@@ -327,7 +336,7 @@
 				}
 			}
 		</script>
-		<div class="tooltips" style="margin-left:5px;display: #perso1_display#;">
+		<div class="tooltips" style="display: #perso1_display#;">
 			<span title="#perso1_name# || Date valeur : #perso1_value# || Date collecte : #perso1_collect#" style="width:15px;max-width:15px;max-height:15px;">#perso1_icon#</span>
 			<span id="perso1_unite#id#"></span>
 		</div>
@@ -348,7 +357,7 @@
 				}
 			}
 		</script>
-		<div class="tooltips" style="margin-left:5px;display: #perso2_display#;">
+		<div class="tooltips" style="display: #perso2_display#;">
 			<span title="#perso2_name# || Date valeur : #perso2_value# || Date collecte : #perso2_collect#" style="width:15px;max-width:15px;max-height:15px;">#perso2_icon#</span>
 			<span id="perso2_unite#id#"></span>
 		</div>
