--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -1,42 +1,41 @@
 <div class="eqLogic eqLogic-widget col2" data-eqLogic_id="#id#" data-eqType="#eqType#" data-version="#version#" data-eqLogic_uid="#uid#" data-translate-category="#translate_category#" data-category="#category#" data-tags="#tags#" style="#style#">
 	<style>
-		div.eqLogic-widget .cmd.monitor-btn {
-			padding-top: 6px;
-			font-size: 12px !important;
-		}
-		div.eqLogic-widget.editingMode .cmd.monitor-btn {
-			display: none !important;
-		}
-		div.monitor-name-flex {
-			display: flex !important;
+		span.monitor-name-flex {
+			display: flex;
 			padding-left: 5px !important;
-			justify-content: space-between;
+			
 		}
-		div.monitor-name-center {
-			display: flex !important;
+		span.monitor-name-center {
+			display: flex;
 			flex: 1;
 			float: center;
 			justify-content: center;
+			text-align: center;
 			white-space: nowrap;
 		}
-		div.monitor-name-left {
-			display: flex !important;
+		span.monitor-name-center span {
+			padding-left: 12px !important;
+			padding-right: 12px !important;
+		}
+		span.monitor-name-left {
+			display: flex;
 			flex: 1;
 			float: left;
-			justify-content: flex-start;			
+			justify-content: flex-start;
+			align-items: center;
 		}
-		div.monitor-name-left span {
-			margin-right: 3px;
+		span.monitor-name-left i {
+			margin-right: 5px;
 		}
-		div.monitor-name-right {
-			display: flex !important;
+		span.monitor-name-right {
+			display: flex;
 			flex: 1;
-			padding-right: 5px;
 			float: right;
 			justify-content: flex-end;
+			align-items: center;
 		}
-		div.monitor-name-right i {
-			padding-right: 5px;
+		span.monitor-name-right i {
+			margin-right: 10px !important;
 		}
 		div.monitor-cmds {
 			display: block;
@@ -46,97 +45,77 @@
 			text-overflow: ellipsis;
 		}
 	</style>
-	<div class="widget-name monitor-name-flex">
-		<div class="monitor-name-left">
-			<span id="iconSSH#id#"></span>
+	<span class="monitor-name-flex">
+		<span class="monitor-name-left">
+			<span class="cmd" id="iconSSH#id#"></span>
 			<script>
 				if ('#cnx_ssh#' == 'OK') {
-					document.getElementById('iconSSH#id#').innerHTML = '<i title="Connexion SSH OK" class="cmd monitor-btn fas fa-check tooltips" style="color: var(--al-success-color) !important;" ></i>';
+					document.getElementById('iconSSH#id#').innerHTML = '<i title="Connexion SSH OK" class="fas fa-check" style="color: var(--al-success-color) !important;" ></i>';
 				}
 				if ('#cnx_ssh#' == 'KO') {
-					document.getElementById('iconSSH#id#').innerHTML = '<i title="Connexion SSH KO" class="cmd monitor-btn fas fa-times tooltips" style="color: var(--al-danger-color) !important;"></i>';
+					document.getElementById('iconSSH#id#').innerHTML = '<i title="Connexion SSH KO" class="fas fa-times" style="color: var(--al-danger-color) !important;"></i>';
 				}
 			</script>
-			<span id="iconCron#id#"></span>
+			<span class="cmd" id="iconCron#id#"></span>
 			<script>
 				if ('#cron_status#' == '1') {
 					if ('#cron_status_custom#' == '1') {
-						document.getElementById('iconCron#id#').innerHTML = '<i title="Cron ON (Custom)" class="cmd monitor-btn fas fa-play-circle tooltips" style="display: #cron_status_display#;color: var(--al-warning-color) !important;"></i>';
+						document.getElementById('iconCron#id#').innerHTML = '<i title="Cron ON (Custom)" class="fas fa-play-circle tooltips" style="display: #cron_status_display#;color: var(--al-warning-color) !important;"></i>';
 					} else {
-						document.getElementById('iconCron#id#').innerHTML = '<i title="Cron ON (Default)" class="cmd monitor-btn fas fa-play-circle tooltips" style="display: #cron_status_display#;color: var(--al-success-color) !important;"></i>';
+						document.getElementById('iconCron#id#').innerHTML = '<i title="Cron ON (Default)" class="fas fa-play-circle tooltips" style="display: #cron_status_display#;color: var(--al-success-color) !important;"></i>';
 					}
 				}
 				if ('#cron_status#' == '0') {
 					if ('#cron_status_custom#' == '1') {
-						document.getElementById('iconCron#id#').innerHTML = '<i title="Cron OFF (Custom)" class="cmd monitor-btn fas fa-pause-circle tooltips" style="display: #cron_status_display#;color: var(--al-warning-color) !important;"></i>';
+						document.getElementById('iconCron#id#').innerHTML = '<i title="Cron OFF (Custom)" class="cmd fas fa-pause-circle tooltips" style="display: #cron_status_display#;color: var(--al-warning-color) !important;"></i>';
 					} else {
-						document.getElementById('iconCron#id#').innerHTML = '<i title="Cron OFF (Default)" class="cmd monitor-btn fas fa-pause-circle tooltips" style="display: #cron_status_display#;color: var(--al-danger-color) !important;"></i>';
+						document.getElementById('iconCron#id#').innerHTML = '<i title="Cron OFF (Default)" class="cmd fas fa-pause-circle tooltips" style="display: #cron_status_display#;color: var(--al-danger-color) !important;"></i>';
 					}
 				}
 			</script>
 			<span class="cmd action reboot cursor" title="Redémarrer l'équipement" data-type="action" data-subtype="other" data-cmd_id="#cmd_reboot_id#" style="display: #cmd_reboot_display#;">
-				<i class="cmd monitor-btn fas fa-redo"></i>
-			</span>	
+				<i class="fas fa-redo"></i>
+			</span>
 			<script>
-				document.querySelector('.reboot[data-cmd_id="#cmd_reboot_id#"]' .cmd)?.addEventListener('click', function () {
-					jeeDialog.confirm({
-						title: '<i class="warning fas fa-question-circle"></i> Redémarrer l\'équipement',
-						message: 'Etes-vous sûr de vouloir redémarrer l\'équipement #name# ?',
-						buttons: {
-							confirm: {
-								label: 'Redémarrer',
-								className: 'warning'
-							},
-							cancel: {
-								label: 'Annuler',
-								className: 'info'
-							}
-						},
-						callback: function (result) {
-							if (result) {
-								jeedom.cmd.execute({ id: '#cmd_reboot_id#' });
-							}
-						}
-					});
+				document.querySelector('.reboot[data-cmd_id="#cmd_reboot_id#"]')?.addEventListener('click', function () {
+					if (confirm("Etes-vous sûr de vouloir redémarrer l\'équipement #name# ?")) {
+						jeedom.cmd.execute({ id: '#cmd_reboot_id#' });
+					}
 				});
 			</script>
 			<span class="cmd action poweroff cursor" title="Eteindre l'équipement" data-type="action" data-subtype="other" data-cmd_id="#cmd_poweroff_id#" style="display: #cmd_poweroff_display#;">
-				<i class="cmd monitor-btn fas fa-power-off"></i>
+				<i class="fas fa-power-off"></i>
 				<script>
 					document.querySelector('.poweroff[data-cmd_id="#cmd_poweroff_id#"]')?.addEventListener('click', function () {
-						jeeDialog.confirm({
-							title: '<i class="danger fas fa-question-circle"></i> Eteindre l\'équipement',
-							message: 'Etes-vous sûr de vouloir éteindre l\'équipement #name# ?',
-							buttons: {
-								confirm: {
-									label: 'Eteindre',
-									className: 'danger'
-								},
-								cancel: {
-									label: 'Annuler',
-									className: 'info'
-								}
-							},
-							callback: function (result) {
-								if (result) {
-									jeedom.cmd.execute({ id: '#cmd_poweroff_id#' });
-								}
-							}
-						});
+						if (confirm("Etes-vous sûr de vouloir éteindre l\'équipement #name# ?")) {
+							jeedom.cmd.execute({ id: '#cmd_poweroff_id#' });
+						}
 					});
 				</script>
 			</span>
-		</div>
-		<div class="monitor-name-center">
-			<span>#name_display# <span class="object_name">#object_name#</span></span>
-		</div>
-		<div class="monitor-name-right">
-			<span class="cmd refresh cursor" title="Rafraîchir" data-cmd_id="#refresh_id#">
+		</span>
+		<span class="monitor-name-center">
+			<span class="widget-name">#name_display#</span>
+		</span>
+		<span class="monitor-name-right">
+			<span class="cmd refresh cursor" data-cmd_id="#refresh_id#">
 				<i class="fas fa-sync"></i>
 			</span>
-		</div>
-	</div>
-	<div class="cmds monitor-cmds">
+			<script>
+				if ('#refresh_id#' != '') {
+					document.querySelector('.eqLogic[data-eqLogic_uid="#uid#"] .refresh')?.addEventListener('click', function() {
+						jeedom.cmd.execute({ id: '#refresh_id#' })
+					})
+				} else {
+					document.querySelector('.eqLogic[data-eqLogic_uid="#uid#"] .refresh')?.remove()
+				}
+			</script>
+		</span>
+	</span>
+	<span class="monitor-name-flex">
+		
+	</span>
+	<div class="monitor-cmds">
 		<div class="tooltips" style="display: #distri_name_display#;">
 			<span title="Distribution Linux || Date valeur : #distri_name_value# || Date collecte : #distri_name_collect#" style="width:15px;max-width:15px;max-height:15px;">#distri_name_icon#</span>
 			<span>#distri_name#</span>
@@ -379,14 +358,5 @@
 			}
 		</script>
 	</div>
-	<script>
-		if ('#refresh_id#' != '') {
-			document.querySelector('.eqLogic[data-eqLogic_uid="#uid#"] .refresh')?.addEventListener('click', function() {
-				jeedom.cmd.execute({ id: '#refresh_id#' })
-			})
-		} else {
-			document.querySelector('.eqLogic[data-eqLogic_uid="#uid#"] .refresh')?.remove()
-		}
-	</script>
 	#divGraphInfo#
 </div>
