--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -35,7 +35,7 @@
 		}
 		div.monitor-cmds {
 			display: block;
-			text-align: left;
+			text-align: left !important;
 			padding-left: 5px;
 			overflow: hidden;
 			text-overflow: ellipsis;
