--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -141,7 +141,7 @@
 			}
 		</script>
 	</div>
-	<div class="cmds monitor-cmds">
+	<div class="monitor-cmds">
 		<div class="tooltips" style="display: #distri_name_display#;">
 			<span title="Distribution Linux<br><i>Date de valeur : #distri_name_value#<br>Date de collecte : #distri_name_collect#</i>" style="width:15px;max-width:15px;max-height:15px;">#distri_name_icon#</span>
 			<span>#distri_name#</span>
