--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -35,10 +35,12 @@
 		}
 		div.monitor-cmds {
 			display: block;
-			text-align: left !important;
+			text-align: left;
 			padding-left: 5px;
-			overflow: hidden;
-			text-overflow: ellipsis;
+			overflow: auto;
+			white-space: nowrap;
+			width: 100%;
+			height: calc(100%-24px);
 		}
 	</style>
 	<div class="widget-name monitor-name-flex">
