--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -238,6 +238,15 @@
 				}
 			}
 		</script>
+		<div class="tooltips" style="display: #network_infos_display#;">
+			<span title="Infos Réseau<br><i>Date de valeur : #network_infos_value#<br>Date de collecte : #network_infos_collect#</i>" style="width:15px;max-width:15px;max-height:15px;">#network_infos_icon#</span>
+			<span id="network_infos#id#"></span>
+		</div>
+		<script>
+			if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
+				document.getElementById('network_infos#id#').innerHTML = '<span>#network_infos#</span>';
+			}
+		</script>
 		<div class="tooltips" style="display: #network_display#;">
 			<span title="Trafic Réseau (#network_name# / #network_ip#)<br><i>Date de valeur : #network_value#<br>Date de collecte : #network_collect#</i>" style="width:15px;max-width:15px;max-height:15px;">#network_icon#</span>
 			<span id="network#id#"></span>
