Update mobile widget display

--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -40,7 +40,7 @@
 			overflow: auto;
 			white-space: nowrap;
 			width: 100%;
-			height: calc(100%-24px);
+			height: calc(100% - 24px);
 		}
 	</style>
 	<div class="widget-name monitor-name-flex">
