--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -40,8 +40,10 @@
 			display: block;
 			text-align: left;
 			padding-left: 5px;
-			overflow: hidden;
-			text-overflow: ellipsis;
+			overflow: auto;
+			white-space: nowrap;
+			width: 100%;
+			height: calc(100% - 24px);
 		}
 	</style>
 	<span class="monitor-name-flex">
